--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="The eisenhower matrix. How to make decisions on what's urgent& important">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 </div>
 <div class="centered-main-page-element">
@@ -26,14 +26,14 @@
     <input type="text" class="task">
     <button class="edit">Edit</button>
     <button class="delete">
-        <img src="./remove.svg"></button></li>
+        <img src="./remove.svg" alt="Remove button"></button></li>
 <li class="editMode">
     <input type="checkbox">
     <label class="task">Go Shopping</label>
     <input type="text" value="Go Shopping" class="task">
     <button class="edit">Save</button>
     <button class="delete">
-        <img src="./remove.svg"></button>
+        <img src="./remove.svg" alt="Remove button"></button>
 </li>
 </ul>
     <h3>Completed</h3>
@@ -43,7 +43,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-                <img src="./remove.svg"></button>
+                <img src="./remove.svg" alt="Remove button"></button>
         </li>
     </ul>
 </div>
