--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <div class="aaa">
     <img src="./eisenhower-matrix.jpg"
          alt="The eisenhower matrix. How to make decisions on what's urgent& important">
-    <a class="more_inf"
+    <a class="more-inf"
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 </div>
 <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
         <input id="new-task"
@@ -26,7 +26,7 @@
     </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="incomplete-tasks">
         <li>
             <input type="checkbox">
             <label class="task">Pay Bills</label>
@@ -38,7 +38,7 @@
                      alt="Remove button">
             </button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text"
